--- a/themes/classic/_dev/css/components/drop-down.scss
+++ b/themes/classic/_dev/css/components/drop-down.scss
@@ -1,10 +1,10 @@
 .dropdown{
-  color:$gray;
+  color:gray('600');
   &:hover .expand-more{
-    color: $brand-primary;
+    color: theme-color('primary');
   }
   .expand-more{
-    color: $gray-darker;
+    color: gray('900');
     cursor: pointer;
     user-select: none;
 
@@ -20,7 +20,7 @@
     -moz-appearance: none;
     border: 0 none;
     outline: 0 none;
-    color: $gray-darker;
+    color: gray('900');
     background: white;
   }
 }
@@ -28,6 +28,6 @@
 .dropdown-item:focus, .dropdown-item:hover {
   background: none;
   text-decoration: none;
-  color: $brand-primary;
+  color: theme-color('primary');
 }
 
