--- a/themes/classic/_dev/css/partials/_variables.scss
+++ b/themes/classic/_dev/css/partials/_variables.scss
@@ -1,23 +1,26 @@
-$gray-darker: #232323;
-$gray: #7A7A7A;
-$gray-light: #F1F1F1;
-$gray-lighter: #f6f6f6;
-$brand-primary: #2fb5d2;
-$brand-secondary: #f39d72;
-$brand-success: #4cbb6c;
-$brand-warning: #ff9a52;
-$brand-danger: #ff4c4c;
-$label-color: $gray-darker;
+$gray-100: #f6f6f6;
+$gray-200: #F1F1F1;
+$gray-600: #7A7A7A;
+$gray-900: #232323;
+$blue: #2fb5d2;
+$red: #ff4c4c;
+$orange: #ff9a52;
+$green: #4cbb6c;
+$theme-colors: (
+  secondary: #f39d72,
+  warning: $orange,
+);
+$label-color: gray('900');
 $btn-primary-color: #fff;
-$btn-primary-bg: $brand-primary;
+$btn-primary-bg: theme-color('primary');
 $btn-primary-border: transparent;
-$btn-secondary-color: $gray-darker;
-$btn-secondary-bg: $gray-lighter;
+$btn-secondary-color: gray('900');
+$btn-secondary-bg: gray('100');
 $btn-secondary-border: transparent;
 $btn-border-radius: 0;
 $input-border-color: rgba(0, 0, 0, 0.25);
 $headings-font-weight: 700;
-$tooltip-bg: $brand-danger;
+$tooltip-bg: theme-color('danger');
 $border-radius: 0;
 $extra-small-space: 0.3125rem;
 $small-space: 0.625rem;
@@ -28,11 +31,12 @@ $warning: #FF9A52;
 $warning-hover: #FDE7BB;
 $alert-warning-bg: rgba(255,154,82,0.3);
 $alert-warning-border: $warning;
-$alert-warning-text: $gray-darker;
+$alert-warning-text: gray('900');
 $btn-warning-bg: $warning;
 $btn-warning-color: white;
 $btn-tertiary-color: #6C868E;
 $btn-tertiary-hover: #BBCDD2;
+$font-family-sans-serif: 'Noto Sans', sans-serif !default;
 $base-font-size: 1rem;
 $font-size-lg: 0.9375rem;
 $font-size-sm: 0.875rem;
@@ -51,6 +55,6 @@ $display3-size: 1.563rem;
 $display3-weight: 400;
 $display4-size: 1.25rem;
 $display4-weight: 400;
-$text-muted: $gray;
+$text-muted: gray('600');
 $NotoSansPath: "~notosans-fontface/fonts";
 $NotoSansVersion: "1.0.1";
