--- a/themes/classic/_dev/css/components/customization-modal.scss
+++ b/themes/classic/_dev/css/components/customization-modal.scss
@@ -1,7 +1,7 @@
 .customization-modal {
   .modal-content {
     border-radius: 0;
-    border: 1px solid $gray-lighter;
+    border: 1px solid gray('100');
     .modal-body {
       padding-top: 0;
       .product-customization-line {
@@ -11,7 +11,7 @@
         }
         padding-bottom: 0.9375rem;
         padding-top: 0.9375rem;
-        border-bottom: 1px solid $gray-lighter;
+        border-bottom: 1px solid gray('100');
         &:last-child {
           padding-bottom: 0;
           border-bottom: 0;
