--- a/themes/classic/_dev/css/partials/_commons.scss
+++ b/themes/classic/_dev/css/partials/_commons.scss
@@ -4,24 +4,30 @@ html {
 }
 body {
   direction: ltr;
-  font-family: 'Noto Sans', sans-serif;
   font-size: $base-font-size;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: $gray-darker;
+  color: gray('900');
   line-height: 1.25em;
+}
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: $font-family-sans-serif;
 }
 ul {
   list-style: none;
   padding-left: 0;
 }
 a:hover {
-  color: $brand-primary;
+  color: theme-color('primary');
   text-decoration: none;
 }
 p {
   font-size: 0.9375rem;
-  color: $gray;
+  color: gray('600');
   font-weight: 400;
 }
 .dropdown-item:focus,
@@ -40,14 +46,14 @@ p {
   background-size: contain;
   &.active,
   &:hover {
-    border: 2px solid $gray-darker;
+    border: 2px solid gray('900');
   }
 }
 .facet-label {
   &.active,
   &:hover {
     .custom-checkbox span.color {
-      border: 2px solid $gray-darker;
+      border: 2px solid gray('900');
     }
   }
 }
@@ -55,11 +61,11 @@ p {
 .h2,
 .h3 {
   text-transform: uppercase;
-  color: $gray-darker;
+  color: gray('900');
 }
 .h4 {
   font-weight: $headings-font-weight;
-  color: $gray-darker;
+  color: gray('900');
 }
 .btn-primary,
 .btn-secondary {
@@ -75,7 +81,7 @@ p {
   @extend .btn-secondary;
   background-color: #F7F7F7;
   text-transform: lowercase;
-  color: $gray;
+  color: gray('600');
   box-shadow: 0.0625rem 0.0625rem 0.0625rem 0 rgba(0, 0, 0, 0.1);
   padding: 0.25rem;
   margin: 0.25rem 0;
@@ -97,7 +103,7 @@ p {
   &:focus {
     outline: 0;
     .expand-more {
-      color: $brand-primary;
+      color: theme-color('primary');
     }
   }
 }
@@ -105,7 +111,7 @@ p {
   @include box-shadow;
 }
 label ,.label {
-  color: $gray-darker;
+  color: gray('900');
   text-align: right;
   font-size: 0.875rem;
 }
@@ -116,19 +122,19 @@ small.label, small.value {
   padding-top: 0.625rem;
 }
 .form-control {
-  background: $gray-light;
-  color: $gray;
+  background: gray('200');
+  color: gray('600');
   border: $input-btn-border-width solid $input-border-color;
   padding: 0.5rem 1rem;
   &:focus {
     background-color: white;
-    outline: 0.1875rem solid $brand-primary;
-    color: $gray-darker;
+    outline: 0.1875rem solid theme-color('primary');
+    color: gray('900');
   }
 }
 .input-group {
   &.focus {
-    outline: 0.1875rem solid $brand-primary;
+    outline: 0.1875rem solid theme-color('primary');
   }
   .form-control:focus {
     outline: none;
@@ -145,7 +151,7 @@ small.label, small.value {
       padding: 0.625rem 1rem;
       text-transform: uppercase;
       &[data-action="show-password"]{
-        background: $gray;
+        background: gray('600');
         height: 100%;
       }
     }
@@ -153,29 +159,29 @@ small.label, small.value {
 }
 input, textarea {
   &::-webkit-input-placeholder {
-    color: $gray;
+    color: gray('600');
   }
   &::-moz-placeholder {
-    color: $gray;
+    color: gray('600');
   }
   &:-ms-input-placeholder {
-    color: $gray;
+    color: gray('600');
   }
   &:-moz-placeholder {
-    color: $gray;
+    color: gray('600');
   }
   &:active {
     &::-webkit-input-placeholder {
-      color: $gray-darker;
+      color: gray('900');
     }
     &::-moz-placeholder {
-      color: $gray-darker;
+      color: gray('900');
     }
     &:-ms-input-placeholder {
-      color: $gray-darker;
+      color: gray('900');
     }
     &:-moz-placeholder {
-      color: $gray-darker;
+      color: gray('900');
     }
   }
 }
@@ -183,7 +189,7 @@ input, textarea {
   height: 2.625rem;
   -moz-appearance: none;
   -webkit-appearance: none;
-  background: $gray-light url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAQAAAD9CzEMAAAAPklEQVR4Ae3TwREAEBQD0V/6do4SXPZg7EsBhsQ8IEmSMOsiuEfg3gL3oXC7wK0bd1G4o8X9F4yIkyQfSrIByQBjp7QuND8AAAAASUVORK5CYII=") no-repeat scroll right 0.5rem center / 1.25rem 1.25rem;
+  background: gray('200') url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAQAAAD9CzEMAAAAPklEQVR4Ae3TwREAEBQD0V/6do4SXPZg7EsBhsQ8IEmSMOsiuEfg3gL3oXC7wK0bd1G4o8X9F4yIkyQfSrIByQBjp7QuND8AAAAASUVORK5CYII=") no-repeat scroll right 0.5rem center / 1.25rem 1.25rem;
   padding: 0 0.5rem;
 }
 .form-control-valign {
@@ -192,11 +198,11 @@ input, textarea {
 .form-control-comment {
   font-size: 0.875rem;
   padding-top: 0.5rem;
-  color: $gray;
+  color: gray('600');
 }
 .form-control-submit {
   &.disabled {
-    background: $brand-info;
+    background: theme-color('info');
     color: white;
   }
 }
@@ -204,10 +210,10 @@ input, textarea {
   &.has-error {
     input,
     select {
-      outline: 0.1875rem solid $brand-danger;
+      outline: 0.1875rem solid theme-color('danger');
     }
     .help-block {
-      color: $brand-danger;
+      color: theme-color('danger');
     }
   }
 }
@@ -216,7 +222,7 @@ input, textarea {
     margin: 0;
   }
   .btn-default {
-    background: $brand-primary;
+    background: theme-color('primary');
     color: white;
     text-transform: uppercase;
     border-radius: 0;
@@ -235,7 +241,7 @@ input, textarea {
     }
     &.form-control,
     &.input-group {
-      color: $gray-darker;
+      color: gray('900');
       background-color: white;
       height: $input-height;
       padding: 0.175rem 0.5rem;
@@ -250,11 +256,11 @@ input, textarea {
     border: $input-btn-border-width solid $input-border-color;
     height: $input-height / 2 + 0.0625rem;
     &:hover {
-      background-color: $gray-light;
+      background-color: gray('200');
     }
   }
   .input-group-btn-vertical {
-    color: $gray-darker;
+    color: gray('900');
     width: auto;
     float: left;
     .bootstrap-touchspin-up {
@@ -288,7 +294,7 @@ input, textarea {
   vertical-align: middle;
   cursor: pointer;
   border-radius: 50%;
-  border: $gray 2px solid;
+  border: gray('600') 2px solid;
   background: white;
   margin-right: 1.25rem;
   input[type="radio"] {
@@ -298,7 +304,7 @@ input, textarea {
   input[type="radio"] {
     &:checked + span {
       display: block;
-      background-color: $brand-primary;
+      background-color: theme-color('primary');
       width: 12px;
       height: 12px;
       border-radius: 50%;
@@ -307,7 +313,7 @@ input, textarea {
       top: 0.125rem;
     }
     &:focus + span {
-      border-color: $gray;
+      border-color: gray('600');
     }
   }
 }
@@ -325,12 +331,12 @@ input, textarea {
       height: 0.9375rem;
       vertical-align: middle;
       cursor: pointer;
-      border: 2px $gray-darker solid;
+      border: 2px gray('900') solid;
       .checkbox-checked {
         display: none;
         margin: -0.25rem -0.125rem;
         font-size: 1.1rem;
-        color: $gray-darker;
+        color: gray('900');
       }
     }
     &:checked + span {
@@ -339,7 +345,7 @@ input, textarea {
       }
     }
     &:focus + span {
-      border-color: $gray;
+      border-color: gray('600');
     }
   }
   label {
@@ -350,7 +356,7 @@ input, textarea {
   font-size: 0.875rem;
 }
 .done {
-  color: $brand-success;
+  color: theme-color('success');
   display: inline-block;
   padding: 0 0.8125rem;
   margin-right: 1.563rem;
@@ -361,7 +367,7 @@ input, textarea {
     width: 3.438rem;
     height: 3.438rem;
     overflow: hidden;
-    border: $gray-light 1px solid;
+    border: gray('200') 1px solid;
     margin: $small-space 0;
     img {
       width: 55px;
@@ -379,11 +385,11 @@ input, textarea {
     dd,
     dt {
       flex: 0 0 45%;
-      background: $gray-light;
+      background: gray('200');
       padding: 0.625rem;
       margin: 0.125rem;
       &:nth-of-type(even) {
-        background: $gray-lighter;
+        background: gray('100');
       }
     }
   }
@@ -393,7 +399,7 @@ input, textarea {
 }
 .btn.disabled,
 .btn.disabled:hover {
-  background: $gray;
+  background: gray('600');
 }
 .alert-warning {
   .material-icons {
@@ -443,10 +449,10 @@ input, textarea {
 .nav-item {
   .nav-link,
   .nav-separtor {
-    color: $gray;
+    color: gray('600');
     font-weight: bold;
     &.active {
-      color: $gray-darker;
+      color: gray('900');
     }
   }
 }
